--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: machine-learn
       target: development
-  
+    command: sleep infinity 
     privileged: true
     env_file:
       - .env
